--- a/src/css/progress indewcator.css
+++ b/src/css/progress indewcator.css
@@ -4,14 +4,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
 }
 body {
+  width: 100vw;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  /* background: #7d2ae8; */
 }
 .circular-progress {
   position: relative;
